<resources>
    <string name="app_name">happy_tails</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_2_5_km">2.5 km</string>
  <string name="lbl_french_bulldog">French Bulldog</string>
  <string name="lbl_2_5_km2">2.5 Km</string>
  <string name="lbl_hello_balaji2">Hello Balaji!</string>
  <string name="lbl_small_change">Small Change</string>
  <string name="lbl_protein_sources">Protein Sources</string>
  <string name="lbl_donation">DONATION</string>
  <string name="lbl_signup">Signup</string>
  <string name="msg_we_will_follow">We will follow up with your vet for any missing info. Claims are typically processed in less than 2 weeks.</string>
  <string name="msg_my_dog_is_incre">My dog is incredibly and unconditionally loyal to me. He loves me as much as I love him or sometimes more.</string>
  <string name="msg_technical_secre">Technical Secretariat for Planning and Economic</string>
  <string name="msg_vitamins_and_mi">Vitamins and Minerals</string>
  <string name="lbl_log_out">Log out</string>
  <string name="msg_elephants_dogs">Elephants/dogs/cats and more, receive more help!</string>
  <string name="lbl_50">50 %</string>
  <string name="lbl_globle_programs">Globle Programs</string>
  <string name="lbl_contact">Contact</string>
  <string name="lbl_55">55%</string>
  <string name="lbl_location">Location</string>
  <string name="msg_get_money_back">Get money back quickly</string>
  <string name="lbl_month">/month</string>
  <string name="msg_password_confir">Password Confirmation</string>
  <string name="lbl_my_notes">My Notes</string>
  <string name="lbl_expiry_date">Expiry Date</string>
  <string name="lbl_trent_will">Trent Will</string>
  <string name="msg_by_sir_fluffing">By Sir Fluffington</string>
  <string name="lbl_michael">Michael</string>
  <string name="lbl_date">Date</string>
  <string name="lbl_40">40%</string>
  <string name="msg_token_of_gratit">Token of Gratitude </string>
  <string name="msg_best_specialist">Best Specialists Nearby</string>
  <string name="lbl_socialization">Socialization</string>
  <string name="lbl_30">30%</string>
  <string name="lbl_coming_soon">COMING SOON</string>
  <string name="lbl_see_location">See Location</string>
  <string name="lbl_community">Community</string>
  <string name="lbl_35">35</string>
  <string name="lbl_notes">Notes</string>
  <string name="lbl_32">3</string>
  <string name="lbl_password">Password</string>
  <string name="msg_creating_new_ac">Creating new Account? Signup </string>
  <string name="lbl_phillips">Phillips</string>
  <string name="lbl_sat_7">Sat, 7</string>
  <string name="lbl_brown">Brown</string>
  <string name="lbl_tails">Tails</string>
  <string name="lbl_20">20</string>
  <string name="lbl_23">23</string>
  <string name="lbl_rs">Rs</string>
  <string name="lbl_abandon_on_road">Abandon On Road</string>
  <string name="lbl_22">2</string>
  <string name="lbl_25">25</string>
  <string name="lbl_26">26</string>
  <string name="lbl_7_11_pm">7:11 PM</string>
  <string name="lbl_browse_more">Browse More</string>
  <string name="lbl_502">50</string>
  <string name="msg_browse_any_othe">Browse any other </string>
  <string name="lbl_free_up_space">Free up space</string>
  <string name="lbl_11_years">11 years</string>
  <string name="lbl_or_drop_a_file">or drop a file,</string>
  <string name="msg_helping_you_to">Helping you 
to keep your bestie 
stay healthy!</string>
  <string name="msg_find_your_lovab">Find your lovable Pets</string>
  <string name="lbl_12">1</string>
  <string name="lbl_add_insurance">Add insurance</string>
  <string name="lbl_10">10%</string>
  <string name="lbl_16">16</string>
  <string name="msg_hussain_sagar">Hussain Sagar, Hyderabad</string>
  <string name="lbl_15">15</string>
  <string name="lbl_19_00">19.00</string>
  <string name="lbl_255000">$ 255000</string>
  <string name="lbl_done">Done</string>
  <string name="lbl_veterinary">Veterinary</string>
  <string name="lbl_about_itachi">About Itachi</string>
  <string name="lbl_pets">Pets</string>
  <string name="msg_connect_with_5">Connect with 5-star pet caregivers near you who offer boarding, walking, house sitting or day care.</string>
  <string name="msg_find_your_furry">Find your furry friend at the shelter</string>
  <string name="lbl_just_for_you">Just for you</string>
  <string name="msg_development_goa">Development Goals, DESA, in collaboration</string>
  <string name="lbl_adopt_a_pet">Adopt a pet</string>
  <string name="lbl_5_0_500">5.0 (500)</string>
  <string name="msg_i_m_so_tired_of">"I'm so tired of this day to much 
work to do!"</string>
  <string name="msg_welcome_please">Welcome! Please enter your information below and get started.</string>
  <string name="lbl_package_details">Package Details</string>
  <string name="lbl_support_about">Support &amp; About</string>
  <string name="lbl_doantion_amount">Doantion amount </string>
  <string name="lbl_security">security</string>
  <string name="msg_balajinbtt_gmai2">balajinbtt@gmail.com</string>
  <string name="msg_phillips_was_cu2">Phillips was currently at the age of </string>
  <string name="lbl_behaviorals">Behaviorals</string>
  <string name="lbl_more">More.</string>
  <string name="msg_1_2_km_away_fro">1,2 km away from you</string>
  <string name="msg_report_a_proble">Report a problem</string>
  <string name="lbl_hello_balaji">Hello, Balaji</string>
  <string name="msg_an_american_lab">An American Lab-Dog</string>
  <string name="lbl_hyderabad">Hyderabad</string>
  <string name="msg_indo_asian_bree">Indo-Asian Breed</string>
  <string name="msg_pay_your_pet_s">"Pay your pet's vet bill, and send us your claim along with vet records and invoice from the visit."</string>
  <string name="lbl_upload_more">Upload More</string>
  <string name="lbl_settings">Settings</string>
  <string name="lbl_or">Or</string>
  <string name="msg_medical_interve">Medical interventions</string>
  <string name="lbl_great">Great</string>
  <string name="msg_procedures_and">Procedures and Diagnostics</string>
  <string name="msg_pet_care_centre">Pet Care Centres</string>
  <string name="msg_balaji_rao_pet">Balaji rao pet 2nd line</string>
  <string name="lbl_type">Type</string>
  <string name="lbl_pet_adoption">Pet Adoption</string>
  <string name="msg_obedience_cours">Obedience Courses</string>
  <string name="msg_louis_was_curre">Louis was currently at the age of 5 living his happy life at pet care center\u2028and we are happy to see the face of such animals.</string>
  <string name="msg_josephine_gordo">Josephine Gordon</string>
  <string name="lbl4">\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022</string>
  <string name="lbl5">·</string>
  <string name="lbl2">&#1049375;</string>
  <string name="lbl3">\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022</string>
  <string name="lbl_home">Home</string>
  <string name="lbl_dentistry">Dentistry</string>
  <string name="lbl_country">Country:</string>
  <string name="lbl_get_started2">Get started</string>
  <string name="lbl_url">URL</string>
  <string name="lbl_happy">Happy </string>
  <string name="lbl_samuel">Samuel</string>
  <string name="msg_do_not_forget_t">Do not forget to take the dog out on Thursday night</string>
  <string name="msg_dr_rajiv_khann">Dr. Rajiv Khanna</string>
  <string name="lbl_ellen_lambert">Ellen Lambert</string>
  <string name="lbl_15_00">15.00</string>
  <string name="lbl_features">Features</string>
  <string name="lbl_1_5_km">1.5 km</string>
  <string name="lbl_donte">Donte</string>
  <string name="msg_cool_let_s_m">"Cool!&#128522; let's meet at 16:00 
near the shopping mall"</string>
  <string name="msg_filadelfia_par">Filadelfia, Paraguay The Division for Sustainable</string>
  <string name="lbl_vaccinations">Vaccinations</string>
  <string name="lbl_more2">More</string>
  <string name="lbl_11_02_2024">11.02.2024</string>
  <string name="lbl_85000">$ 85000</string>
  <string name="lbl_edit_profile">Edit profile</string>
  <string name="lbl_basic_pack">Basic Pack</string>
  <string name="lbl_donate_rs_50_00">Donate Rs 50.00</string>
  <string name="msg_send_us_your_cl">Send us your claim</string>
  <string name="lbl_laura_levy">Laura Levy</string>
  <string name="msg_capacity_buildi">Capacity Building Workshop on Sub-national</string>
  <string name="lbl_42_cm">42 cm</string>
  <string name="msg_take_your_pet_t">Take your pet to the vet</string>
  <string name="lbl_connor_frazier">Connor Frazier</string>
  <string name="lbl_how_it_works">How it works</string>
  <string name="lbl_our_services">Our Services</string>
  <string name="msg_search_somethin">Search Something Here...</string>
  <string name="lbl_4_9_335">4.9 (335)</string>
  <string name="lbl_itachi_behavior">Itachi behavior</string>
  <string name="msg_your_donation_c">"Your donation can change a pet's life forever."</string>
  <string name="lbl_2024">2024</string>
  <string name="lbl_2023">2023</string>
  <string name="lbl_search2">search</string>
  <string name="lbl_2022">2022</string>
  <string name="msg_accidents_and_i">Accidents and Injuries</string>
  <string name="msg_join_your_first">Join your first community and get 
free 50 Viber coins!</string>
  <string name="lbl_4_9_440">4.9 (440)</string>
  <string name="lbl_nutrition">Nutrition</string>
  <string name="lbl_add_insurance2">Add Insurance</string>
  <string name="lbl_active">Active</string>
  <string name="lbl_healthy">Healthy</string>
  <string name="msg_thanks_for_help">Thanks For Helping me!</string>
  <string name="msg_watch_our_exclu">Watch our exclusive storyboard</string>
  <string name="lbl_a583d01">A583D01</string>
  <string name="lbl6">/</string>
  <string name="lbl7">$</string>
  <string name="msg_thank_you_for_d">Thank You For Donating</string>
  <string name="msg_hussain_sagar_r">Hussain Sagar Road</string>
  <string name="lbl_mon_9">Mon, 9</string>
  <string name="msg_check_your_rewa">Check Your Rewards</string>
  <string name="lbl_every_3_month">Every 3 Month</string>
  <string name="lbl_type_here">Type here</string>
  <string name="lbl_valid_until">Valid until</string>
  <string name="msg_thank_you_for_s">Thank you for
SAVING ME</string>
  <string name="msg_dr_harish_kapi">Dr. Harish Kapila</string>
  <string name="lbl_see_more">See More</string>
  <string name="lbl_13_03_2023">13.03.2023</string>
  <string name="lbl_13_03_2021">13.03.2021</string>
  <string name="msg_effective_altru">Effective Altruism: Spring update 2024!</string>
  <string name="msg_tries_to_eat_th">Tries to eat things</string>
  <string name="lbl_100">100</string>
  <string name="lbl_20_reviews">20 reviews</string>
  <string name="msg_join_your_first2">Join your first community and get 
</string>
  <string name="lbl_create_account">Create account</string>
  <string name="msg_specialty_class">Specialty Classes &amp;
Workshops</string>
  <string name="lbl_see_all">See All</string>
  <string name="lbl_1_km">1 km</string>
  <string name="lbl_add_account">Add account</string>
  <string name="lbl_insurance_added">Insurance Added</string>
  <string name="msg_fiber_antioxid">Fiber, Antioxidants</string>
  <string name="msg_veterinary_dent">Veterinary Dentist</string>
  <string name="lbl_nobivac_parvo_c">Nobivac Parvo-C</string>
  <string name="lbl_details">Details</string>
  <string name="lbl_20_000">20.000</string>
  <string name="lbl_07_2026">07-2026</string>
  <string name="lbl_18_05_2023">18.05.2023</string>
  <string name="lbl_veterinarian">Veterinarian</string>
  <string name="lbl_lot">Lot</string>
  <string name="lbl_18_09_2025">18.09.2025</string>
  <string name="lbl_martha_roth">Martha Roth</string>
  <string name="msg_no_bad_reaction">No bad reactions</string>
  <string name="msg_vaccination_dat">Vaccination date</string>
  <string name="msg_veterinary_spec">Veterinary Specialist</string>
</resources>