<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listbodyTwoRowModel" type="com.happytails.app.modules.profilehealthcardaddinsurancestep23.data.model.ListbodyTwoRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRowbody"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <TextView android:ellipsize="end" android:id="@+id/txtBodyTwo"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.73" android:layout_width="0dp"
            android:lineSpacingExtra="@dimen/_6pxh"
            android:singleLine="true"
            android:text="@{listbodyTwoRowModel.txtBodyTwo}"
            style="@style/txtNotoSansnotosansregular14_3" tools:text="@string/msg_accidents_and_i"/>
        <LinearLayout android:id="@+id/linearRowprice"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_128pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.27" android:layout_width="0dp" android:orientation="horizontal">
            <TextView android:ellipsize="end" android:id="@+id/txtPrice"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_weight="0.14" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_5pxh"
                android:singleLine="true"
                android:text="@{listbodyTwoRowModel.txtPrice}"
                style="@style/txtNotoSansnotosansregular12_2" tools:text="@string/lbl7"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtValueUnit"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_weight="0.86" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:singleLine="true"
                android:text="@{listbodyTwoRowModel.txtValueUnit}"
                style="@style/txtNotoSansnotosanssemibold14" tools:text="@string/lbl_20_000"/>
        </LinearLayout>
    </LinearLayout>
</layout>
