<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="profileHealthCardVaccinesDetailsVM" type="com.happytails.app.modules.profilehealthcardvaccinesdetails.data.viewmodel.ProfileHealthCardVaccinesDetailsVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearProfileHealt"
        android:layout_height="match_parent"
        android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:gravity="start"
            android:id="@+id/linearActionSheets"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_50cornerRadius">
            <TextView android:ellipsize="end" android:id="@+id/txtText"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_43pxh"
                android:layout_marginStart="@dimen/_43pxh"
                android:layout_marginTop="@dimen/_41pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:singleLine="true"
                android:text="@{profileHealthCardVaccinesDetailsVM.profileHealthCardVaccinesDetailsModel.txtText}"
                style="@style/txtNotoSansnotosanssemibold16_2" tools:text="@string/lbl_nobivac_parvo_c"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtTextOne"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_43pxh"
                android:layout_marginStart="@dimen/_43pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:singleLine="true"
                android:text="@{profileHealthCardVaccinesDetailsVM.profileHealthCardVaccinesDetailsModel.txtTextOne}"
                style="@style/txtNotoSansnotosansmedium14_1" tools:text="@string/lbl_details"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearCardDetails"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_40pxh"
                android:layout_marginStart="@dimen/_43pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <View android:background="@color/bluegray_50"
                    android:id="@+id/lineLineDivider"
                    android:layout_height="@dimen/_42pxv"
                    android:layout_weight="0.0" android:layout_width="0dp"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearColumnbody"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.65"
                    android:layout_width="0dp" android:orientation="vertical">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtBody"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="wrap_content"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:singleLine="true"
                        android:text="@{profileHealthCardVaccinesDetailsVM.profileHealthCardVaccinesDetailsModel.txtBody}"
                        style="@style/txtNotoSansnotosansregular14_3" tools:text="@string/lbl_lot"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtValueUnit"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="wrap_content"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:singleLine="true"
                        android:text="@{profileHealthCardVaccinesDetailsVM.profileHealthCardVaccinesDetailsModel.txtValueUnit}"
                        style="@style/txtNotoSansnotosanssemibold14" tools:text="@string/lbl_a583d01"/>
                </LinearLayout>
                <View android:background="@color/bluegray_50"
                    android:id="@+id/lineLineDividerOne"
                    android:layout_height="@dimen/_42pxv"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_weight="0.0" android:layout_width="0dp"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearColumnbodyOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_70pxh"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.34"
                    android:layout_width="0dp" android:orientation="vertical">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtBodyOne"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:singleLine="true"
                        android:text="@{profileHealthCardVaccinesDetailsVM.profileHealthCardVaccinesDetailsModel.txtBodyOne}"
                        style="@style/txtNotoSansnotosansregular14_3" tools:text="@string/lbl_expiry_date"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtValueUnitOne"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_1pxv"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:singleLine="true"
                        android:text="@{profileHealthCardVaccinesDetailsVM.profileHealthCardVaccinesDetailsModel.txtValueUnitOne}"
                        style="@style/txtNotoSansnotosanssemibold14" tools:text="@string/lbl_07_2026"/>
                </LinearLayout>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtTextTwo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_43pxh"
                android:layout_marginStart="@dimen/_43pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:singleLine="true"
                android:text="@{profileHealthCardVaccinesDetailsVM.profileHealthCardVaccinesDetailsModel.txtTextTwo}"
                style="@style/txtNotoSansnotosansmedium14_1" tools:text="@string/lbl_date"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearCardDetails1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_40pxh"
                android:layout_marginStart="@dimen/_43pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <View android:background="@color/bluegray_50"
                    android:id="@+id/lineLineDividerTwo"
                    android:layout_height="@dimen/_42pxv"
                    android:layout_weight="0.0" android:layout_width="0dp"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearColumnbodyTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_weight="0.66"
                    android:layout_width="0dp" android:orientation="vertical">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtBodyTwo"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:singleLine="true"
                        android:text="@{profileHealthCardVaccinesDetailsVM.profileHealthCardVaccinesDetailsModel.txtBodyTwo}"
                        style="@style/txtNotoSansnotosansregular14_3" tools:text="@string/msg_vaccination_dat"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtValueUnitTwo"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_width="wrap_content"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:singleLine="true"
                        android:text="@{profileHealthCardVaccinesDetailsVM.profileHealthCardVaccinesDetailsModel.txtValueUnitTwo}"
                        style="@style/txtNotoSansnotosanssemibold14" tools:text="@string/lbl_18_05_2023"/>
                </LinearLayout>
                <View android:background="@color/bluegray_50"
                    android:id="@+id/lineLineDividerThree"
                    android:layout_height="@dimen/_42pxv"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_weight="0.0" android:layout_width="0dp"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearColumnbodyThree"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_73pxh"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_weight="0.33"
                    android:layout_width="0dp" android:orientation="vertical">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtBodyThree"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_7pxh"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:singleLine="true"
                        android:text="@{profileHealthCardVaccinesDetailsVM.profileHealthCardVaccinesDetailsModel.txtBodyThree}"
                        style="@style/txtNotoSansnotosansregular14_3" tools:text="@string/lbl_valid_until"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtValueUnitThree"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:singleLine="true"
                        android:text="@{profileHealthCardVaccinesDetailsVM.profileHealthCardVaccinesDetailsModel.txtValueUnitThree}"
                        style="@style/txtNotoSansnotosanssemibold14" tools:text="@string/lbl_18_09_2025"/>
                </LinearLayout>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtTextThree"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_43pxh"
                android:layout_marginStart="@dimen/_43pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:singleLine="true"
                android:text="@{profileHealthCardVaccinesDetailsVM.profileHealthCardVaccinesDetailsModel.txtTextThree}"
                style="@style/txtNotoSansnotosansmedium14_1" tools:text="@string/lbl_veterinarian"/>
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearContent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_40pxh"
                android:layout_marginStart="@dimen/_43pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStylecornerRadius_8">
                <ImageView android:id="@+id/imageAvatar"
                    android:layout_height="@dimen/_54pxh"
                    android:layout_marginBottom="@dimen/_13pxv"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="@dimen/_54pxh"
                    android:scaleType="centerCrop" circular="@{true}"
                    imageRes="@{@drawable/img_avatar}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_avatar"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearColumntitle"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_17pxv"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_18pxv"
                    android:layout_weight="0.5"
                    android:layout_width="0dp" android:orientation="vertical">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTitle"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:singleLine="true"
                        android:text="@{profileHealthCardVaccinesDetailsVM.profileHealthCardVaccinesDetailsModel.txtTitle}"
                        style="@style/txtNotoSansnotosanssemibold14" tools:text="@string/lbl_martha_roth"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtBodyFour"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3pxv"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_6pxh"
                        android:singleLine="true"
                        android:text="@{profileHealthCardVaccinesDetailsVM.profileHealthCardVaccinesDetailsModel.txtBodyFour}"
                        style="@style/txtNotoSansnotosansregular14" tools:text="@string/msg_veterinary_spec"/>
                </LinearLayout>
                <ImageView android:id="@+id/imageSettings"
                    android:layout_height="@dimen/_44pxh"
                    android:layout_marginBottom="@dimen/_17pxv"
                    android:layout_marginEnd="@dimen/_16pxh"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_width="@dimen/_82pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_settings_bluegray_401"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_settings_bluegray_401"/>
            </LinearLayout>
            <TextView android:ellipsize="end"
                android:id="@+id/txtTextFour"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_43pxh"
                android:layout_marginStart="@dimen/_43pxh"
                android:layout_marginTop="@dimen/_24pxv"
                android:layout_width="wrap_content"
                android:lineSpacingExtra="@dimen/_6pxh"
                android:singleLine="true"
                android:text="@{profileHealthCardVaccinesDetailsVM.profileHealthCardVaccinesDetailsModel.txtTextFour}"
                style="@style/txtNotoSansnotosansmedium14_1" tools:text="@string/lbl_notes"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearCardDetails2"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_43pxh"
                android:layout_marginStart="@dimen/_43pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <View android:background="@color/bluegray_50"
                    android:id="@+id/lineLineDividerFour"
                    android:layout_height="@dimen/_20pxv"
                    android:layout_weight="0.01" android:layout_width="0dp"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtValueUnitFour"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_weight="0.99"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:singleLine="true"
                    android:text="@{profileHealthCardVaccinesDetailsVM.profileHealthCardVaccinesDetailsModel.txtValueUnitFour}"
                    style="@style/txtNotoSansnotosanssemibold14" tools:text="@string/msg_no_bad_reaction"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearButtonsContain"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_marginEnd="@dimen/_40pxh"
                android:layout_marginStart="@dimen/_43pxh"
                android:layout_marginTop="@dimen/_36pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius_7">
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnDone"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:paddingBottom="@dimen/_17pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_17pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_done"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_3" tools:text="@string/lbl_done"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
